--- a/index.html
+++ b/index.html
@@ -15,51 +15,8 @@
     <link rel="alternate" href="https://novapatch.ie/" hreflang="x-default">
     <link rel="author" href="https://novapatch.ie/en/about">
     <link rel="canonical" href="https://novapatch.ie/">
+    <link rel="stylesheet" href="/css/site.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap">
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-      body {
-        font-family: "EB Garamond", serif;
-        font-size: 18px;
-        line-height: 1.5;
-        margin: 0 auto;
-        max-width: 42rem;
-        padding: 1.25rem;
-        text-align: center;
-      }
-      h1 {
-        margin: 0;
-      }
-      img.hero {
-        display: block;
-        height: auto;
-        margin: 0 auto 0.75rem auto;
-        max-width: 100%;
-        width: 350px;
-      }
-      nav.links ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-      nav.links li {
-        display: inline;
-      }
-      nav.links li:not(:last-child)::after {
-        content: "·";
-        margin-left: 0.2rem;
-        margin-right: 0.2rem;
-      }
-      a:link, a:visited {
-        color: #000;
-        text-decoration: none;
-      }
-      a:hover, a:focus-visible {
-        text-decoration: underline;
-      }
-    </style>
   </head>
   <body>
     <h1>Nova Patch</h1>
